Fix Gallery button too tall

--- a/sass/speakersbureau.scss
+++ b/sass/speakersbureau.scss
@@ -29,6 +29,7 @@ body#databaseRecordsPage.h-page-with-database-speakers-bureau {
       flex: 1;
       * {
         width: 100%;
+        line-height: normal; // fix font-size 0 bug
       }
     }
   }
